--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -13,7 +13,7 @@ export { {{{name}}} } from './models/{{{name}}}';
 {{else if @root.useUnionTypes}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{else if enums}}
-export { {{{name}}} } from './models/{{{name}}}';
+export type { {{{name}}} } from './models/{{{name}}}';
 {{else}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{/if}}
