--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -10,6 +10,7 @@ export { OpenAPI } from './core/OpenAPI';
 {{#each models}}
 {{#if enum}}
 export { {{{name}}} } from './models/{{{name}}}';
+export type { {{{name}}} } from './models/{{{name}}}';
 {{else if @root.useUnionTypes}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{else if enums}}
