--- a/src/templates/partials/exportInterface.hbs
+++ b/src/templates/partials/exportInterface.hbs
@@ -16,7 +16,7 @@ export type {{{name}}} = {
 {{#if enums}}
 {{#unless @root.useUnionTypes}}
 
-export namespace {{{name}}} {
+export namespace {{{name}}}Enums {
 
     {{#each enums}}
     {{#if description}}
