--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -16,8 +16,8 @@ export { {{{name}}}Enums } from './models/{{{name}}}';
 export type { {{{name}}} } from './models/{{{name}}}';
 {{else if enums}}
 // Condition 2
-export { {{{name}}} } from './models/{{{name}}}';
-export type { {{{name}}}Enums } from './models/{{{name}}}';
+export { {{{name}}}Enums } from './models/{{{name}}}';
+export type { {{{name}}} } from './models/{{{name}}}';
 {{else}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{/if}}
