--- a/src/templates/exportModel.hbs
+++ b/src/templates/exportModel.hbs
@@ -8,9 +8,12 @@ import type { {{{this}}} } from './{{{this}}}';
 {{/if}}
 
 {{#equals export 'interface'}}
+// interface
 {{>exportInterface}}
 {{else equals export 'enum'}}
+// enum
 {{>exportEnum}}
 {{else}}
+// type
 {{>exportType}}
 {{/equals}}
