--- a/src/templates/index.hbs
+++ b/src/templates/index.hbs
@@ -17,9 +17,11 @@ export type { {{{name}}} } from './models/{{{name}}}';
 {{else if enums}}
 // Condition 2
 export { {{{name}}}Enums } from './models/{{{name}}}';
+{{#equals export 'interface'}}
 {{#unless @root.useUnionTypes}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{/unless}}
+{{/equals}}
 {{else}}
 export type { {{{name}}} } from './models/{{{name}}}';
 {{/if}}
