--- a/src/templates/partials/typeEnum.hbs
+++ b/src/templates/partials/typeEnum.hbs
@@ -1,7 +1,7 @@
 {{~#if @root.useUnionTypes~}}
 {{#each enum}}{{{value}}}{{#unless @last}} | {{/unless}}{{/each}}{{>isNullable}}
 {{~else if parent~}}
-{{{parent}}}.{{{name}}}{{>isNullable}}
+{{{parent}}}Enums.{{{name}}}{{>isNullable}}
 {{~else~}}
 {{#each enum}}{{{value}}}{{#unless @last}} | {{/unless}}{{/each}}{{>isNullable}}
 {{~/if~}}
