--- a/src/templates/core/fetch/getResponseBody.hbs
+++ b/src/templates/core/fetch/getResponseBody.hbs
@@ -2,7 +2,7 @@ async function getResponseBody(response: Response): Promise<any> {
     try {
         const contentType = response.headers.get('Content-Type');
         const contentDisposition = response.headers.get('Content-Disposition');
-        console.log('unit test to fetch  the changes');
+        console.log('unit test to fetch  the changes test verssion');
 
         if (contentType) {
 
