--- a/src/templates/core/fetch/getResponseBody.hbs
+++ b/src/templates/core/fetch/getResponseBody.hbs
@@ -3,6 +3,8 @@ async function getResponseBody(response: Response): Promise<any> {
         const contentType = response.headers.get('Content-Type');
         const contentDisposition = response.headers.get('Content-Disposition');
         console.log('dummy changes');
+        console.log('dummy changes22');
+
 
 
         if (contentType) {
